# Class-Schedule-Maker

./: Class_Schedule.md  README.md  main.py  previous_classes.xlsx  pyproject.toml
src/class_schedule_maker/: crew.py  main.py
src/class_schedule_maker/config/: agents.yaml  tasks.yaml
src/class_schedule_maker/tools/: custom_tool.py
