[project]
name = "class_schedule_maker"
version = "0.1.0"
description = "class-schedule-maker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
class_schedule_maker = "class_schedule_maker.main:run"
run_crew = "class_schedule_maker.main:run"
train = "class_schedule_maker.main:train"
replay = "class_schedule_maker.main:replay"
test = "class_schedule_maker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
